--- a/css/style.css
+++ b/css/style.css
@@ -93,8 +93,9 @@ body {
     line-height: 1.6;
     color: var(--text-primary);
     background: var(--bg-light);
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: auto;
+    -moz-osx-font-smoothing: auto;
+    text-rendering: auto;
 }
 
 .container {
